<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>excavator_rviz_plugin</name>
    <version>0.0.1</version>
    <description>Components of MoveIt that offer visualization</description>
    <maintainer email="solergaming555@gmail.com">SolerGO</maintainer>

    <license>BSD-3-Clause</license>



    <author email="solergaming555@gmail.com">SolerGO</author>


    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>pkg-config</buildtool_depend>
    <depend>moveit_common</depend>

    <build_depend>class_loader</build_depend>
    <build_depend>eigen</build_depend>
    <build_depend>libqt5-opengl-dev</build_depend>
    <build_depend>qtbase5-dev</build_depend>

    <depend>geometric_shapes</depend>
    <depend>interactive_markers</depend>
    <depend>moveit_ros_robot_interaction</depend>
    <depend>moveit_ros_perception</depend>
    <depend>moveit_ros_planning_interface</depend>
    <depend>moveit_ros_warehouse</depend>
    <depend>object_recognition_msgs</depend>
    <depend version_gte="1.11.2">pluginlib</depend>
    <depend>rclcpp</depend>
    <depend>rclpy</depend>
    <depend>rviz2</depend>
    <depend>tf2_eigen</depend>

    <export>
        <build_type>ament_cmake</build_type>
        <rviz plugin="${prefix}/motion_planning_rviz_plugin_description.xml"/>
    </export>

</package>